# project-finscrape

./: package-lock.json  pyproject.toml
mainApp/: settings.py  urls.py  wsgi.py
nextjs-front/: package-lock.json  package.json  tailwind.config.ts
nextjs-front/src/app/: layout.tsx  page.tsx
nextjs-front/src/app/betakit-funding/: page.tsx
nextjs-front/src/pagesold/: home.tsx
nextjsFront/: package-lock.json  package.json  tsconfig.json
nextjsFront/src/app/: globals.css
nextjsFront/src/pagesold/: _app.tsx
test/: aiFunction.py  betakitFunction.py  betakitFunctionAsync.py  betakitScript.ipynb  constants.py  scraper.py  similarityFunction.py  similarityFunctionNew.py  similarityFunctionNew2.py  timeChecker.ipynb
